test/sema/report-multiple-errors.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: unknown identifier 'ff'
    var a = ff;
    // CHECK: [[@LINE+1]]:13: error: unknown identifier 'xx'
    var b = xx;
    // CHECK-NOT: unknown identifier 'b'
    var c = b;
}
